solved spacing issue between email and phone in networking card

--- a/src/Styling/dashboard/jobrow.scss
+++ b/src/Styling/dashboard/jobrow.scss
@@ -53,7 +53,7 @@
       color: white;
       letter-spacing: 1.2px;
       width: 90px;
-      font-size: 0.9em;
+      font-size: 0.7em;
       border-right: solid white 5px;
       height: 100%;
       align-items: center;
