--- a/src/Styling/dashboard/networking.scss
+++ b/src/Styling/dashboard/networking.scss
@@ -130,6 +130,11 @@
         color: rgba(173, 216, 230, 0.794);
         font-size: 0.8em;
         letter-spacing: 1.2px;
+        display: inline-block;
+      }
+
+      .invisiblePhoneH4 {
+        color: rgba(255, 255, 255, 0);
       }
     }
   }
